# kamune

./: .dockerignore  .gitignore  .golangci.yaml  AGENTS.md  CHANGELOG.md  Makefile  README.md  SPEC.md  conn.go  conn_test.go  dial.go  errors.go  exchange.go  go.mod  go.sum  handshake.go  handshake_test.go  intro.go  intro_test.go  kamune.go  peer.go  resume.go  resume_integration_test.go  resume_ratchet_test.go  resume_test.go  router.go  routes.go  routes_test.go  serde.go  serde_test.go  server.go  session.go  storage.go  storage_test.go  transport.go  transport_test.go  version.go  version_test.go
.zed/: debug.json
bus/: Makefile  README.md  animated_dot.go  app.go  app_test.go  bubble.go  chat_tab.go  colors.go  context_menu.go  dialogs.go  go.mod  go.sum  history.go  index.html  log_viewer.go  main.go  menu.go  messaging.go  network.go  package.json  session.go  session_item.go  status.go  theme.go  tsconfig.json  ui.go  verifier.go  widgets.go
bus/logger/: logger.go  logger_test.go
bus/src/: App.svelte  app.css
bus/src-tauri/: Cargo.toml  tauri.conf.json
bus/src-tauri/capabilities/: default.json
bus/src-tauri/icons/: README.md  icon.icns
bus/src-tauri/src/: daemon_bridge.rs  main.rs
chat/: client.go  go.mod  go.sum  main.go  server.go  tea.go
cmd/bus/: .gitignore  README.md  app.go  app_test.go  broker.go  directp2p.go  go.mod  go.sum  loghandler.go  main.go  messaging.go  network.go  p2p.go  p2p_test.go  (+8 more)
docs/: DAEMON.md  RATCHET.md  RELAY.md  SPEC.md  relay-transport.md
relay/: .goreleaser.yaml  LICENSE  Makefile  README.md  go.mod  go.sum
(+253 files in other folders)
